--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to right, rgb(167, 215, 240), rgb(17,54,71));
+}
+
 #entrada{
     clear: both;
     display: block;
@@ -11,10 +16,27 @@
 }
 
 button{
-    font-size: 200%;
-    font-weight: bold;
-    border-radius: 20px;
-    width: 10em;
-    height: 2em;
-    outline: none;
+    background-image: linear-gradient(to right, rgb(0, 02, 197), rgb(90, 20, 220));
+    width: 100%;
+    border: none;
+    padding: 15px;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+button:hover{
+    background-image: linear-gradient(to right, rgb(0, 80,172), rgb(80, 19,195));
+}
+
+.box{
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(70, 63, 100, 0.6);
+    padding: 15px;
+    border-radius: 15px;
+    width: 35%;
+    color: white;
 }
