--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@ body{
 
 #entrada{
     clear: both;
-    display: block;
     margin-bottom: 20px;
     font-size: 30px;
     width: 5em;
     height: 3em;
     text-align: center;
     border-radius: 10px;
-    display: nome;
+    display: none;
 }
 
 button{
@@ -33,6 +32,8 @@ button:hover{
     position: absolute; 
     top: 50%;
     left: 50%;
+    text-align: center;
+    align-items: center;
     transform: translate(-50%,-50%);
     background-color: rgba(70, 63, 100, 0.6);
     padding: 15px;
